kustomize/overlays/sylvia-iot-core/gui-settings-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sylvia-iot-gui
spec:
  template:
    spec:
      containers:
        - name: sylvia-iot-gui
